tidying up tidy data and melt intros

--- a/SeabornIntro.ipynb
+++ b/SeabornIntro.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Why tidy data is useful for exploratory analysis\n",
+    "# Why tidy data is useful for exploratory analysis\n",
     "\n",
     "We **explore** data to find interesting **patterns** by:\n",
     "- **Visualizing** (with tables or charts) **individuals, distributions or aggregations of numerical values (measures)**\n",
@@ -13,7 +13,7 @@
     "    - distinguishing by color,\n",
     "    - or making separate plots (small multiples) in columns or rows\n",
     "    \n",
-    "### Tidy data makes this sort of exploration and analysis easy!\n",
+    "## Tidy data makes this sort of exploration and analysis easy!\n",
     "\n",
     "Tidy data's structure of *one variable per column* and *one observation per row* makes it easy to do this exploration by making it simple to aggregate and visualize. These same procedures would be hard if, say, we had multiple observations in a single row, or if the same type of variable were split across multiple columns!"
    ]
@@ -47,9 +47,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Tips dataset\n",
+    "## The Tips dataset\n",
     "\n",
-    "*The tips dataset is really nice for exploring differences between numerical values and distributions across a population distinguished by lots of categorical variables.* It consists of 244 records/observations of what diners spent and how much they tipped across seven variables:\n",
+    "*(I'm not sure where the Tips dataset comes from. We'll load it from Seaborn. There's a \n",
+    "[version of it on Kaggle](https://www.kaggle.com/datasets/ranjeetjain3/seaborn-tips-dataset)\n",
+    "that includes some metadata.)*\n",
+    "\n",
+    "**The tips dataset is really nice for exploring differences between numerical values and distributions across a population distinguished by lots of categorical variables.** It consists of 244 records/observations of what diners spent and how much they tipped across seven variables:\n",
     "\n",
     "- **total_bill** – how much the meal cost (decimal, US dollars)\n",
     "- **tip** – how much they tipped (decimal, US dollars)\n",
@@ -239,11 +243,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Individual variables & distributions\n",
+    "## Individual variables & distributions\n",
     "\n",
     "The most basic form of exploration is to visualize the distribution of values in a numerical column. A histogram is the most classic, but there are some nice alternatives for smaller data sets.\n",
     "\n",
-    "#### Swarm plot \n",
+    "### Swarm plot \n",
     "\n",
     "One interesting alternative is a `swarmplot()`. Points are stacked at their data value rather than overlapping. This doesn't scale very well to huge datasets, but with small data it's nice to see each individual point as a mark.\n",
     "\n",
@@ -333,7 +337,10 @@
     }
    ],
    "source": [
-    "ax = sns.swarmplot(x=\"day\", y=\"total_bill\", color='grey', data=tips)"
+    "ax = sns.swarmplot(x=\"day\", \n",
+    "                   y=\"total_bill\", \n",
+    "                   color='grey', \n",
+    "                   data=tips)"
    ]
   },
   {
@@ -393,7 +400,10 @@
     }
    ],
    "source": [
-    "ax = sns.swarmplot(x=\"day\", y=\"total_bill\", hue=\"sex\", data=tips)"
+    "ax = sns.swarmplot(x=\"day\", \n",
+    "                   y=\"total_bill\", \n",
+    "                   hue=\"sex\", \n",
+    "                   data=tips)"
    ]
   },
   {
@@ -451,7 +461,11 @@
     }
    ],
    "source": [
-    "ax = sns.swarmplot(x=\"day\", y=\"total_bill\", hue=\"sex\", dodge=True, data=tips)"
+    "ax = sns.swarmplot(x=\"day\", \n",
+    "                   y=\"total_bill\", \n",
+    "                   hue=\"sex\", \n",
+    "                   dodge=True, \n",
+    "                   data=tips)"
    ]
   },
   {
@@ -462,7 +476,9 @@
     "\n",
     "With other plot types we can split and aggregate (here calculating means and confidence intervals) in even more complex ways.\n",
     "\n",
-    "**If the data wasn't tidy, we wouldn't have this flexibility to split or aggregate numerical variables by categorical ones!**"
+    "**If the data wasn't tidy, we wouldn't have this flexibility to split or aggregate numerical variables by categorical ones!**\n",
+    "\n",
+    "Let's create a new numerical column for the following plots."
    ]
   },
   {
@@ -480,11 +496,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Catplot is a general interface for faceted plots\n",
+    "### Catplot is a general interface for faceted plots\n",
     "\n",
     "From [the documentation](https://seaborn.pydata.org/generated/seaborn.catplot.html), \n",
     "catplot is a \"Figure-level interface for drawing categorical plots onto a \n",
-    "[FacetGrid](https://seaborn.pydata.org/generated/seaborn.FacetGrid.html#seaborn.FacetGrid)\""
+    "[FacetGrid](https://seaborn.pydata.org/generated/seaborn.FacetGrid.html#seaborn.FacetGrid)\"\n",
+    "\n",
+    "#### Split smoker data Female/Male with confidence intervals (default)\n",
+    "\n",
+    "Stripplot is the default, but here we want a \"point\" plot which are connected with lines and have confidence intervals as error bars."
    ]
   },
   {
@@ -504,10 +524,20 @@
     }
    ],
    "source": [
-    "ax_catplot_point = sns.catplot(x=\"day\", y=\"TipPercent\", \n",
-    "                 hue=\"sex\", hue_order=['Female','Male'],\n",
-    "                 kind=\"point\", dodge=True,\n",
-    "                 data=smoker_data)"
+    "ax_catplot_point = sns.catplot(x=\"day\", \n",
+    "                               y=\"TipPercent\",\n",
+    "                               hue=\"sex\", \n",
+    "                               hue_order=['Female','Male'],\n",
+    "                               kind=\"point\", \n",
+    "                               dodge=True,\n",
+    "                               data=smoker_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Facet by smoker with split bars by \"sex\""
    ]
   },
   {
@@ -527,11 +557,13 @@
     }
    ],
    "source": [
-    "ax_catplot_bar = sns.catplot(x=\"day\", y=\"TipPercent\", \n",
-    "                 hue=\"sex\", hue_order=['Female','Male'],\n",
-    "                 kind=\"bar\",\n",
-    "                 col=\"smoker\",\n",
-    "                 data=tips)"
+    "ax_catplot_bar = sns.catplot(x=\"day\", \n",
+    "                             y=\"TipPercent\",\n",
+    "                             hue=\"sex\", \n",
+    "                             hue_order=['Female','Male'],\n",
+    "                             kind=\"bar\",\n",
+    "                             col=\"smoker\",\n",
+    "                             data=tips)"
    ]
   },
   {
@@ -636,14 +668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, this would cause an error"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "ax.savefig('swarm.pdf')"
+    "#### So, `ax.savefig('swarm.pdf')` would cause an error"
    ]
   },
   {
@@ -722,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -736,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
