--- a/MeltIntro.ipynb
+++ b/MeltIntro.ipynb
@@ -8,9 +8,9 @@
     }
    },
    "source": [
-    "## Column headers are values, not variable names\n",
+    "## Messy situation: Column headers are values, not variable names\n",
     "\n",
-    "*This is one of the more common manipulations to get data into a tidy form!*\n",
+    "***This is one of the more common messy data situations, so also one of the more common manipulations you need to get data into a tidy form!***\n",
     "\n",
     "For example, many government data sets are in a format which is **good for visual lookup, but not for analysis and exploration**, with measurements in various years spread across multiple columns."
    ]
@@ -140,8 +140,8 @@
     "\n",
     "The problems with this format are \n",
     "\n",
-    "- **The column headers are really a Dimension that should have its own *Year* column**\n",
-    "- **The values that are spread across the multiple rows and columns in the body of the table are a Measure that should be in a single column.**\n",
+    "- **The column headers are really a Dimension that should be in its own *Year* column**\n",
+    "- **The values, spread across the multiple rows and columns in the body of the table, are a Measure that should be in a single column.**\n",
     "\n",
     "Confusingly, every language seems to have its own term for this process / transformation:\n",
     "\n",
@@ -166,7 +166,8 @@
     "*Notice that*\n",
     "\n",
     "- *the column headers by default end up in a column called \"variable\"*\n",
-    "- *the table body values end up in a column called \"value\"*"
+    "- *the table body values end up in a column called \"value\"*\n",
+    "- *the id_vars get repeated for each original column*"
    ]
   },
   {
@@ -399,7 +400,7 @@
    "source": [
     "## More complete `.melt()` statement\n",
     "\n",
-    "More fully, you can explicitly specify any combination of these:\n",
+    "You can explicitly specify any combination of these:\n",
     "\n",
     "- list of columns that don't get melted (and, thus, will get repeated): `id_vars=`\n",
     "- list of columns that get melted from columns into rows: `value_vars=`\n",
@@ -533,7 +534,8 @@
     "\n",
     "You can sort the rows of a DataFrame according to any column, or ordered combination of columns.\n",
     "\n",
-    "- **The results won't be saved unless you do it with `inplace=True` or assign the results of the sort to a variable!**\n",
+    "- Like most DataFrame methods (functions), this returns a DataFrame, it doesn't change anthing in place.\n",
+    "- So, **the results won't be saved unless you assign the results of the sort to a variable or run it with the argument `inplace=True`!**\n",
     "- Sometimes this is useful to just inspect a DataFrame in a certain sort order, when you don't really need to save the results.\n",
     "- Notice that the default is to sort in \"ascending\" order, or `ascending=True`. \n",
     "- To get descending, you need to specify `ascending=False`.\n",
@@ -778,7 +780,7 @@
    "source": [
     "### Sorting rows by multiple columns\n",
     "\n",
-    "Here we'll sort the rows \"descending\" by 'year', and then within each year group by 'state'. It's not necessary, but it's slightly more readable if you specify the argument name `by`."
+    "Here we'll first sort the rows \"descending\" by 'year', and then within each year sort by 'state'. It's not necessary, but it's slightly more readable if you specify the argument name `by`."
    ]
   },
   {
@@ -1024,7 +1026,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1038,7 +1040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
