added command chanining to melt intro and exercise

--- a/MeltIntro.ipynb
+++ b/MeltIntro.ipynb
@@ -1017,11 +1017,149 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "\n",
+    "## Chaining commands\n",
+    "\n",
+    "It's more efficient to chain commands together instead of creating intermediate variables when you don't really need them. *(By the way, it also helps you avoid the annoying and confusing `SettingWithCopyWarning` referenced in [DataFrameAccess](DataFrameAccess.ipynb).)*\n",
+    "\n",
+    "I first learned about this in the article [4 Pandas Anti-Patterns](https://www.aidancooper.co.uk/pandas-anti-patterns/) by Aidan Cooper. He references and credits Matt Harrison's excellent book [Effective Pandas](https://store.metasnake.com/effective-pandas-book?xgtab&). *(Chapter 35 covers how to debug chained commands.)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Melt plus sort all in one command\n",
+    "\n",
+    "One of the keys to chaining in a readable way is that the Python interpreter doesn't care if you break lines or have consistent indentation for things in parentheses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>year</th>\n",
+       "      <th>number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    state  year  number\n",
+       "7  Alaska  2011       8\n",
+       "6   Maine  2011       7\n",
+       "8    Ohio  2011       9\n",
+       "4  Alaska  2010       5\n",
+       "3   Maine  2010       4\n",
+       "5    Ohio  2010       6\n",
+       "1  Alaska  2009       2\n",
+       "0   Maine  2009       1\n",
+       "2    Ohio  2009       3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tidy_sorted = (df\n",
+    " .melt(\n",
+    "     id_vars=['state'], \n",
+    "     value_vars=['2009','2010','2011'], \n",
+    "     var_name='year', \n",
+    "     value_name='number')\n",
+    " .sort_values(\n",
+    "     by=['year','state'], \n",
+    "     ascending=[False,True])\n",
+    ")\n",
+    "\n",
+    "df_tidy_sorted"
+   ]
   }
  ],
  "metadata": {
