--- a/MeltExercise.ipynb
+++ b/MeltExercise.ipynb
@@ -132,11 +132,40 @@
     "# display the results\n",
     "tidy_sorted_df.____(__)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Melt and sort all in one chained command\n",
+    "\n",
+    "To practice chaning commands, now do both of the above operations all at once and make sure you get the same answer as above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tidy_sorted_chained_df = (df\n",
+    "  .____(\n",
+    "      ____, \n",
+    "      ____, \n",
+    "      ____)\n",
+    "  .____(\n",
+    "      ____, \n",
+    "      ____)\n",
+    ")\n",
+    "\n",
+    "# display the results\n",
+    "tidy_sorted_chained_df.____(__)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -150,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
