--- a/MeltExerciseSolutions.ipynb
+++ b/MeltExerciseSolutions.ipynb
@@ -422,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sort and store the results\n",
+    "### Sort and store the results\n",
     "\n",
     "- Now sort again, this time storing the values\n",
     "- this time **descending** by `\"freq\"` so the highest frequency values are at the top\n",
@@ -586,11 +586,192 @@
     "# display the results\n",
     "tidy_sorted_df.head(15)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Melt and sort all in one chained command\n",
+    "\n",
+    "To practice chaning commands, now do both of the above operations all at once and make sure you get the same answer as above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>religion</th>\n",
+       "      <th>income</th>\n",
+       "      <th>freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>Evangelical Prot</td>\n",
+       "      <td>$50-75k</td>\n",
+       "      <td>1486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Catholic</td>\n",
+       "      <td>$50-75k</td>\n",
+       "      <td>1116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Evangelical Prot</td>\n",
+       "      <td>$20-30k</td>\n",
+       "      <td>1064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Evangelical Prot</td>\n",
+       "      <td>$30-40k</td>\n",
+       "      <td>982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Evangelical Prot</td>\n",
+       "      <td>$40-50k</td>\n",
+       "      <td>881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Evangelical Prot</td>\n",
+       "      <td>$10-20k</td>\n",
+       "      <td>869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Catholic</td>\n",
+       "      <td>$20-30k</td>\n",
+       "      <td>732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Catholic</td>\n",
+       "      <td>$30-40k</td>\n",
+       "      <td>670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Catholic</td>\n",
+       "      <td>$40-50k</td>\n",
+       "      <td>638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Catholic</td>\n",
+       "      <td>$10-20k</td>\n",
+       "      <td>617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Evangelical Prot</td>\n",
+       "      <td>&lt;$10k</td>\n",
+       "      <td>575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Catholic</td>\n",
+       "      <td>&lt;$10k</td>\n",
+       "      <td>418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Historically Black Prot</td>\n",
+       "      <td>$10-20k</td>\n",
+       "      <td>244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Historically Black Prot</td>\n",
+       "      <td>$30-40k</td>\n",
+       "      <td>238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Historically Black Prot</td>\n",
+       "      <td>$20-30k</td>\n",
+       "      <td>236</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    religion    income  freq\n",
+       "55         Evangelical Prot    $50-75k  1486\n",
+       "53                  Catholic   $50-75k  1116\n",
+       "25         Evangelical Prot    $20-30k  1064\n",
+       "35         Evangelical Prot    $30-40k   982\n",
+       "45         Evangelical Prot    $40-50k   881\n",
+       "15         Evangelical Prot    $10-20k   869\n",
+       "23                  Catholic   $20-30k   732\n",
+       "33                  Catholic   $30-40k   670\n",
+       "43                  Catholic   $40-50k   638\n",
+       "13                  Catholic   $10-20k   617\n",
+       "5          Evangelical Prot      <$10k   575\n",
+       "3                   Catholic     <$10k   418\n",
+       "17  Historically Black Prot    $10-20k   244\n",
+       "37  Historically Black Prot    $30-40k   238\n",
+       "27  Historically Black Prot    $20-30k   236"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tidy_sorted_chained_df = (df\n",
+    "  .melt(\n",
+    "      id_vars=[\"religion\"], \n",
+    "      var_name=\"income\", \n",
+    "      value_name=\"freq\")\n",
+    "  .sort_values(\n",
+    "      by=[\"freq\"], \n",
+    "      ascending=False)\n",
+    ")\n",
+    "\n",
+    "# display the results\n",
+    "tidy_sorted_chained_df.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -604,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
