--- a/JoinTypes.ipynb
+++ b/JoinTypes.ipynb
@@ -190,7 +190,7 @@
     "\n",
     "**A LEFT JOIN keeps all information from the left table**, but drops rows from the right that don't have a key entry in the left table's key column.\n",
     "\n",
-    "**Notice the Nulls (NaN in Pandas) in the resulting table where keys were missing on the Rigth!**\n",
+    "**Notice the Nulls (NaN in Pandas) in the resulting table where keys were missing on the Right!**\n",
     "\n",
     "<img src=\"images/left_join.png\" width=500>"
    ]
@@ -637,7 +637,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -651,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
