--- a/MergeDatasets.ipynb
+++ b/MergeDatasets.ipynb
@@ -8,10 +8,9 @@
     "\n",
     "It is very common to want to bring in some extra data from a second table and add it to our primary table.\n",
     "\n",
-    "- Our primary table was prepared in tidy form and saved to a CSV file in the SplitExplodeLists.ipynb notebook within my more complete [pandas-jupyterlab](https://github.com/emonson/pandas-jupyterlab) repository. It has people and the states they've lived in.\n",
+    "- Our primary table was prepared in tidy form and saved to a CSV file in the [SplitExplodeLists](SplitExplodeLists.ipynb) notebook. It has people and the states they've lived in.\n",
     "- The second table we'll load from the second sheet in an Excel workbook. It contains populations of states.\n",
-    "\n",
-    "### This is the Pandas equivalent of an SQL JOIN command!"
+    "- **This is the Pandas equivalent of an SQL JOIN command!**"
    ]
   },
   {
@@ -164,9 +163,9 @@
    "source": [
     "## Load state level data to join to our main table\n",
     "\n",
-    "**Note here how we specify the sheet name since the table we want isn't the first sheet in the Excel workbook.** Reading from an Excel file requires the XLRD module, which should be installed by default with the Anaconda Python distribution.\n",
-    "\n",
-    "*Notice that this table also has a \"state\" variable, which we'll use as the \"key\" to join the two.*"
+    "- **Note here how we specify the sheet name since the table we want isn't the first sheet in the Excel workbook.** \n",
+    "- Reading from an Excel file requires the `openpyxl` module, which should be installed by default with the Anaconda Python distribution.\n",
+    "- *Notice that this table also has a \"state\" variable, which we'll use as the \"key\" to join the two.*"
    ]
   },
   {
@@ -274,16 +273,31 @@
    "source": [
     "## LEFT JOIN\n",
     "\n",
-    "We'll do a LEFT JOIN by using the `merge()` function. There are a few variants of the same command that are all equivalent:\n",
+    "We'll do a LEFT JOIN by using the `merge()` function. \n",
+    "[DataFrame.merge documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.merge.html)\n",
+    "\n",
+    "- A LEFT JOIN keeps all information from the left table, but drops rows from the right that don't have a key entry in the left table's key column.\n",
+    "- Notice the Nulls (NaN in Pandas) in the resulting table where keys were missing on the Right!\n",
+    "- The default is an \"inner\" join, which drops any rows where matches are missing from either \"left\" or \"right\"\n",
+    "\n",
+    "<img src=\"images/left_join.png\" width=487>\n",
+    "\n",
+    "*(Note: For more details on JOIN types, see the [JoinTypes notebook](JoinTypes.ipynb). JOIN image comes from the [Tableau tutorial](http://www.tableau.com/learn/tutorials/on-demand/join-types-8.2).*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### There are two equivalent variants of the same command:\n",
     "\n",
     "```\n",
     "result_df = pd.merge(left_df, right_df, how='left', on='state')\n",
     "result_df = left_df.merge(right_df, how='left', on='state')\n",
     "```\n",
     "\n",
-    "If the variable you want to join on, sometimes called the \"key\" field, has different names in each table, instead of `on=` you can specify `left_on=` and `right_on=`.\n",
-    "\n",
-    "*(Note: For more details on JOIN types, see the [JoinTypes notebook](JoinTypes.ipynb).)*"
+    "- If the variable you want to join on, called the \"key\" field, has different names in each table, instead of `on=` you can specify `left_on=` and `right_on=`\n",
+    "- If you need to join on a combination of multiple key columns, you just put the column names in a list"
    ]
   },
   {
@@ -429,6 +443,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### There is also a less-flexible `.join()` method\n",
+    "\n",
+    "- [DataFrame.join documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.join.html)\n",
+    "- `.merge()` can join on any columns in the DataFrames\n",
+    "- with `.merge()` there are options for using the DataFrame index(s) instead of columns: `left_index=True` and/or `right_index=True`\n",
+    "- **`.join()` is fine, but has less options and only joins on the DataFrame indexes**\n",
+    "- my key columns are very often not in the index, so I just use `.merge()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "## Drop unwanted columns\n",
@@ -436,8 +463,8 @@
     "There are two alternative ways to specify rows or columns to drop:\n",
     "\n",
     "- The older style, which I don't like as much, is to specify row or column labels, and then the \"axis\" along which to drop ({0 or ‘index’, 1 or ‘columns’}, default 0)\n",
-    "- **The way I prefer, because it's easier for me to read, is to specify `rows=` or `columns=` and then the labels I want to drop as a list**\n",
-    "- As with `.sort_values()` and many other operations, you need to remember to either reassign to a variable, or include `inplace=True`"
+    "- **The way I prefer, because it's easier for me to read, is to specify `columns=` or `index=` and then a list of labels I want to drop**\n",
+    "- As with `.sort_values()` and many other methods, you need to remember to either reassign to a variable (preferred), or specify `inplace=True`"
    ]
   },
   {
@@ -566,11 +593,18 @@
     "ps_tidy_final = ps_tidy_pop.drop(columns=['house_seats'])\n",
     "ps_tidy_final"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -584,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
