--- a/MergeExercise.ipynb
+++ b/MergeExercise.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "## Load in three data tables from Excel sheets\n",
     "\n",
-    "The three tables we need are stored as separate tabs/sheets in an Excel workbook named:\n",
+    "**The three tables we need are stored in an Excel workbook as separate tabs/sheets named:**\n",
     "\n",
     "- **Demographics**: IDs and information about individual people who took the survey\n",
     "- **Responses**: Both numerical and text responses to the survey questions in \"tall\" or \"tidy\" format. This is tied to the Demographics information by the Respondent_ID key field.\n",
@@ -41,12 +41,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read data from `data/ToySurveyData.xlsx`\n",
+    "### Read data from the file `data/ToySurveyData.xlsx`\n",
     "\n",
     "The basic form of the command you'll need is\n",
     "\n",
     "```\n",
-    "dataframe_variable_name = read_excel('file_name', sheet_name='sheet_name')\n",
+    "dataframe_variable_name = pd.read_excel('file_name', sheet_name='sheet_name')\n",
     "```"
    ]
   },
@@ -86,7 +86,7 @@
    "source": [
     "## merge/JOIN the tables together\n",
     "\n",
-    "There are many ways we could go about this, but let's do it in stages. \n",
+    "There are many ways we could go about this, but let's first do it in stages. \n",
     "\n",
     "#### Demographics - Responses\n",
     "\n",
@@ -140,16 +140,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Single-step chained merge\n",
+    "\n",
+    "- Now let's do the merge in a single, chained command.\n",
+    "- *Remember, you can split the lines of code arbitrarily if you surround the complete command in parentheses. This just makes it easier to read and modify.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "demog_resp_ques = (____\n",
+    "                   .____()\n",
+    "                   .____()\n",
+    "                  )\n",
+    "demog_resp_ques"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
