--- a/MergeExerciseSolutions.ipynb
+++ b/MergeExerciseSolutions.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
    "source": [
     "## Load in three data tables from Excel sheets\n",
     "\n",
-    "The three tables we need are stored as separate tabs/sheets in an Excel workbook named:\n",
+    "**The three tables we need are stored in an Excel workbook as separate tabs/sheets named:**\n",
     "\n",
     "- **Demographics**: IDs and information about individual people who took the survey\n",
     "- **Responses**: Both numerical and text responses to the survey questions in \"tall\" or \"tidy\" format. This is tied to the Demographics information by the Respondent_ID key field.\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "2              3    MT"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "5              3          Q2            No                 0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "1          Q2  Are you scared of dolphins?         YesNo"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
    "source": [
     "## merge/JOIN the tables together\n",
     "\n",
-    "There are many ways we could go about this, but let's do it in stages. \n",
+    "There are many ways we could go about this, but let's first do it in stages. \n",
     "\n",
     "#### Demographics - Responses\n",
     "\n",
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "5              3    MT          Q2            No                 0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "5  Are you scared of dolphins?         YesNo  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,6 +550,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Single-step chained merge\n",
+    "\n",
+    "- Now let's do the merge in a single, chained command.\n",
+    "- *Remember, you can split the lines of code arbitrarily if you surround the complete command in parentheses. This just makes it easier to read and modify.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Respondent_ID</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Question_ID</th>\n",
+       "      <th>Response_text</th>\n",
+       "      <th>Response_numeric</th>\n",
+       "      <th>Question_wording</th>\n",
+       "      <th>Question_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>Incredible</td>\n",
+       "      <td>5</td>\n",
+       "      <td>How are your polo skills?</td>\n",
+       "      <td>Likert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>Q2</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Are you scared of dolphins?</td>\n",
+       "      <td>YesNo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>So so</td>\n",
+       "      <td>3</td>\n",
+       "      <td>How are your polo skills?</td>\n",
+       "      <td>Likert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>Q2</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Are you scared of dolphins?</td>\n",
+       "      <td>YesNo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>Not great</td>\n",
+       "      <td>2</td>\n",
+       "      <td>How are your polo skills?</td>\n",
+       "      <td>Likert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>Q2</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Are you scared of dolphins?</td>\n",
+       "      <td>YesNo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Respondent_ID State Question_ID Response_text  Response_numeric  \\\n",
+       "0              1    NC          Q1    Incredible                 5   \n",
+       "1              1    NC          Q2            No                 0   \n",
+       "2              2    VA          Q1         So so                 3   \n",
+       "3              2    VA          Q2           Yes                 1   \n",
+       "4              3    MT          Q1     Not great                 2   \n",
+       "5              3    MT          Q2            No                 0   \n",
+       "\n",
+       "              Question_wording Question_type  \n",
+       "0    How are your polo skills?        Likert  \n",
+       "1  Are you scared of dolphins?         YesNo  \n",
+       "2    How are your polo skills?        Likert  \n",
+       "3  Are you scared of dolphins?         YesNo  \n",
+       "4    How are your polo skills?        Likert  \n",
+       "5  Are you scared of dolphins?         YesNo  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demog_resp_ques = (demographics\n",
+    "                   .merge(responses, how='left', on='Respondent_ID')\n",
+    "                   .merge(questions, how='left', on='Question_ID')\n",
+    "                  )\n",
+    "demog_resp_ques"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -559,7 +700,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -573,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
