small cleanups before Pandas 102

--- a/TidyDataIntro.ipynb
+++ b/TidyDataIntro.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "We have three people (rows) and their results (in columns) from two different treatments.\n",
     "\n",
-    "*This is similar to the data arrangement we had for the percent of women in bachelor's degree categories – there with years as the index and categories as the column headers.*"
+    "*This is similar to the data arrangement we had in [BasicPandasPlotting](BasicPandasPlotting.ipynb) for the percent of women in bachelor's degree categories – there with years as the index and categories as the column headers.*"
    ]
   },
   {
@@ -559,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
