Shortening a bit for some DUL reporting group

--- a/DULReporting_DataFrameAccess.ipynb
+++ b/DULReporting_DataFrameAccess.ipynb
@@ -36,20 +36,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```\n",
     "data_dict = {'letters':['A','B','c','D','eee'], \n",
     "             'hundreds':[100,200,300,400,500], \n",
     "             'tens':[10.0,20.0,30.0,40.0,50.0],\n",
-    "             'boolean':[True,False,True,True,False]}"
+    "             'boolean':[True,False,True,True,False]}\n",
+    "\n",
+    "df_temp = pd.DataFrame(data_dict)\n",
+    "df_temp.to_csv('data/data_dict.csv', index=False)\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -128,13 +131,13 @@
        "4     eee       500  50.0    False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame(data_dict)\n",
+    "df = pd.read_csv('data/data_dict.csv')\n",
     "df"
    ]
   },
