rearranging date time talk in nc exploration

--- a/Groupby_NCexploration.ipynb
+++ b/Groupby_NCexploration.ipynb
@@ -1024,6 +1024,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "# Exploring data time trends\n",
+    "\n",
+    "Since our DataFrame index is a datetime, we can use special built-in Pandas date and time functionailty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DatetimeIndex Attributes – *categorical discreet date/time parts*\n",
+    "\n",
+    "The DatetimeIndex class has a lot of optimized features, which are detailed in [the Index section of the Time series / date functionality documentation](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#indexing)\n",
+    "\n",
+    "In Tableau there is the concept of **categorical discreet date parts**, which we use when we want to extract part of a date or time and ignore the rest of the information. For example:\n",
+    "\n",
+    "- **Is there a trend in our data through the days of the week?** *Maybe more emissions happen on weekdays, and less on weekends?* In that case we want to know what happens on Sundays, Mondays, etc, but ignore what month or year or hour the data comes from and aggregate over all of those attributes while preserving the weekday categorical distinction.\n",
+    "- **Is there a seasonal trend over the months of the year?** *Maybe there are more emissions during the winter or summer?* In this case all we want to retain is whether the data is from a January, or a February, etc, and ignore (i.e., aggregate over) all other attributes like what hour or day or year they're from.\n",
+    "- **Is there a trend across hours in the day?** *Maybe there are more emissions when more people are awake, or sleeping?* In this case we want to know which of the 24 hours during a day something occurred in, and aggregate across everything else.\n",
+    "\n",
+    "[Datetime index attributes](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DatetimeIndex.html) – gives you categorical date/time parts like month, day, minute, etc\n",
+    "\n",
+    "*Note: One thing I find quite inconvenient is that the date and time attributes turn into integers (starting at 0 or 1, depending on the specifics) instead of staying nice, human-readable values. (e.g., February == 2, Monday == 0, etc.) DatetimeIndex has some methods like `.month_name()`, but by default the pivot tables will be sorted alphabetically rather than in calendar month order...*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resampling – *preserves continuous time, but aggregated to a coarser level*\n",
+    "\n",
+    "If you want to preserve a sense of continuous time, but aggregate up to a coarser time level than the original data date/time sampling level of detail, there is a concept in Pandas of **resampling** date and time data. Resampling is \"a time-based groupby, followed by a reduction method on each of its groups.\" **For example, if you have hourly data and want to convert that data (through aggregation like a mean or sum) into daily or monthly or yearly data, you need to resample.**\n",
+    "\n",
+    "This can be done in conjunction with a groupby() operation. I give one example of this at the very end of this lesson.\n",
+    "\n",
+    "- Resample in timeseries documentation: [Date/Time resampling](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#resampling)\n",
+    "- Series.resample() documentation: [Resample method](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.resample.html)\n",
+    "- Valid strings for resampling frequency: [date-offset object docs](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -1154,49 +1199,6 @@
     "    values='measure',\n",
     "    aggfunc='sum'\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exploring data time trends\n",
-    "\n",
-    "Since our DataFrame index is a datetime, we can use special built-in Pandas date and time functionailty."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### DatetimeIndex Attributes – *categorical discreet date/time parts*\n",
-    "\n",
-    "The DatetimeIndex class has a lot of optimized features, which are detailed in [the Index section of the Time series / date functionality documentation](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#indexing)\n",
-    "\n",
-    "In Tableau there is the concept of **categorical discreet date parts**, which we use when we want to extract part of a date or time and ignore the rest of the information. For example:\n",
-    "\n",
-    "- **Is there a trend in our data through the days of the week?** *Maybe more emissions happen on weekdays, and less on weekends?* In that case we want to know what happens on Sundays, Mondays, etc, but ignore what month or year or hour the data comes from and aggregate over all of those attributes while preserving the weekday categorical distinction.\n",
-    "- **Is there a seasonal trend over the months of the year?** *Maybe there are more emissions during the winter or summer?* In this case all we want to retain is whether the data is from a January, or a February, etc, and ignore (i.e., aggregate over) all other attributes like what hour or day or year they're from.\n",
-    "- **Is there a trend across hours in the day?** *Maybe there are more emissions when more people are awake, or sleeping?* In this case we want to know which of the 24 hours during a day something occurred in, and aggregate across everything else.\n",
-    "\n",
-    "[Datetime index attributes](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DatetimeIndex.html) – gives you categorical date/time parts like month, day, minute, etc\n",
-    "\n",
-    "*Note: One thing I find quite inconvenient is that the date and time attributes turn into integers (starting at 0 or 1, depending on the specifics) instead of staying nice, human-readable values. (e.g., February == 2, Monday == 0, etc.) DatetimeIndex has some methods like `.month_name()`, but by default the pivot tables will be sorted alphabetically rather than in calendar month order...*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Resampling – *preserves continuous time, but aggregated to a coarser level*\n",
-    "\n",
-    "If you want to preserve a sense of continuous time, but aggregate up to a coarser time level than the original data date/time sampling level of detail, there is a concept in Pandas of **resampling** date and time data. Resampling is \"a time-based groupby, followed by a reduction method on each of its groups.\" **For example, if you have hourly data and want to convert that data (through aggregation like a mean or sum) into daily or monthly or yearly data, you need to resample.**\n",
-    "\n",
-    "This can be done in conjunction with a groupby() operation. I give one example of this at the very end of this lesson.\n",
-    "\n",
-    "- Resample in timeseries documentation: [Date/Time resampling](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#resampling)\n",
-    "- Series.resample() documentation: [Resample method](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.resample.html)\n",
-    "- Valid strings for resampling frequency: [date-offset object docs](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#dateoffset-objects)"
    ]
   },
   {
