changed wording about the bar conditional formatting default now being min equals 0

--- a/Groupby_NCexploration.ipynb
+++ b/Groupby_NCexploration.ipynb
@@ -2357,8 +2357,8 @@
     "\n",
     "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.io.formats.style.Styler.bar.html\n",
     "\n",
-    "- **Make sure bars go to zero with `vmin=0` so you don't distort perception of the data! That's not the default!**\n",
-    "- **Also explicily set `vmax` to get a common maximum bar length across all columns!**\n",
+    "- Notice that the default is `vmin=0` so you don't distort perception of the data, so you don't have to type that explicitly. That's great and hasn't always been the default (zero bar length at the minimum value used to be the default, which was bad, perceptually).\n",
+    "- **But, you do need to explicily set `vmax` to get a common maximum bar length across all columns!**\n",
     "\n",
     "#### Higher median in the winter\n",
     "\n",
